--- a/osi_prod_avgpurchaseprice/views/product_view.xml
+++ b/osi_prod_avgpurchaseprice/views/product_view.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" ?>
 <odoo>
     <!-- Copyright 2018 Open Source Integrators
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
@@ -7,18 +7,21 @@
     <record id="view_avg_price_product_variant" model="ir.ui.view">
         <field name="name">view.avg.price.product.variant</field>
         <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_variant_easy_edit_view"/>
+        <field name="inherit_id" ref="product.product_variant_easy_edit_view" />
         <field name="arch" type="xml">
             <field name="standard_price" position="after">
-                <field name="valuation" invisible="1"/>
-                <field name="cost_method" invisible="1"/>
-                <field name="reset_date" attrs="{'readonly': True, 'invisible':['|',('valuation','!=', 'real_time'), ('cost_method', 'not in', ['standard', 'average'])]}"/>
+                <field name="valuation" invisible="1" />
+                <field name="cost_method" invisible="1" />
+                <field
+                    name="reset_date"
+                    attrs="{'readonly': True, 'invisible':['|',('valuation','!=', 'real_time'), ('cost_method', 'not in', ['standard', 'average'])]}"
+                />
             </field>
 
             <group name="pricing" position="after">
                 <group name="avg_pricing">
-                    <field name="avg_price" readonly="True"/>
-                    <field name="calculate_from_date"/>
+                    <field name="avg_price" readonly="True" />
+                    <field name="calculate_from_date" />
                 </group>
             </group>
         </field>
@@ -28,14 +31,17 @@
     <record id="view_avg_price_product_product" model="ir.ui.view">
         <field name="name">view.avg.price.product.product</field>
         <field name="model">product.product</field>
-        <field name="inherit_id" ref="product.product_normal_form_view"/>
+        <field name="inherit_id" ref="product.product_normal_form_view" />
         <field name="arch" type="xml">
             <field name="uom_id" position="before">
-                <field name="valuation" invisible="1"/>
-                <field name="cost_method" invisible="1"/>
-                <field name="reset_date" attrs="{'readonly': True, 'invisible':['|',('valuation','!=', 'real_time'), ('cost_method', 'not in', ['standard', 'average'])]}"/>
-                <field name="avg_price" widget="monetary"/>
-                <field name="calculate_from_date"/>
+                <field name="valuation" invisible="1" />
+                <field name="cost_method" invisible="1" />
+                <field
+                    name="reset_date"
+                    attrs="{'readonly': True, 'invisible':['|',('valuation','!=', 'real_time'), ('cost_method', 'not in', ['standard', 'average'])]}"
+                />
+                <field name="avg_price" widget="monetary" />
+                <field name="calculate_from_date" />
             </field>
         </field>
     </record>
@@ -44,14 +50,17 @@
     <record id="view_avg_price_product_template" model="ir.ui.view">
         <field name="name">view.avg.price.product.template</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_only_form_view"/>
+        <field name="inherit_id" ref="product.product_template_only_form_view" />
         <field name="arch" type="xml">
             <field name="uom_id" position="before">
-                <field name="valuation" invisible="1"/>
-                <field name="cost_method" invisible="1"/>
-                <field name="reset_date" attrs="{'readonly': True, 'invisible':['|',('valuation','!=', 'real_time'), ('cost_method', 'not in', ['standard', 'average'])]}"/>
-                <field name="avg_price" readonly="True"/>
-                <field name="calculate_from_date"/>
+                <field name="valuation" invisible="1" />
+                <field name="cost_method" invisible="1" />
+                <field
+                    name="reset_date"
+                    attrs="{'readonly': True, 'invisible':['|',('valuation','!=', 'real_time'), ('cost_method', 'not in', ['standard', 'average'])]}"
+                />
+                <field name="avg_price" readonly="True" />
+                <field name="calculate_from_date" />
             </field>
         </field>
     </record>
