FIX-IMP credit_limit field fixed, add banner on SO to show remaining balance
This module accidentally used the Odoo's default 'credit_limit' field, which is not ideal as we do not touch the OTB credit limit functionality.

Added Banner in SO (draft & sent state) to show the available balance for the Partner.

--- a/osi_partner_credit_limit/views/sale.xml
+++ b/osi_partner_credit_limit/views/sale.xml
@@ -17,13 +17,12 @@
                     />
                 </group>
             </group>
-            <xpath expr="//sheet/div" position="before">
-                <widget
-                    name="web_ribbon"
-                    title="Sales Hold"
-                    bg_color="bg-danger"
-                    attrs="{'invisible': [('sales_hold', '=', False)]}"
-                />
+            <xpath expr="/form/sheet" position="before">
+                <div
+                 class="alert alert-warning mb-0" role="alert"
+                 attrs="{'invisible': [('osi_partner_credit_warning', '=', '')]}">
+                <field name="osi_partner_credit_warning"/>
+            </div>
             </xpath>
         </field>
     </record>
