--- a/osi_partner_credit_limit/views/res_partner.xml
+++ b/osi_partner_credit_limit/views/res_partner.xml
@@ -9,17 +9,19 @@
         <field name="arch" type="xml">
             <group name="fiscal_information" position="before">
                 <group string="Credit Management">
-                    <field name="sales_hold" />
                     <field
-                        name="credit_limit"
+                        name="osi_credit_limit"
+                        groups="osi_partner_credit_limit.group_credit_hold"
+                    />
+                    <field
+                        name="sales_hold"
+                        groups="osi_partner_credit_limit.group_credit_hold"/>
+                    <field
+                        name="credit_hold"
                         groups="osi_partner_credit_limit.group_credit_hold"
                     />
                     <field
                         name="grace_period"
-                        groups="osi_partner_credit_limit.group_credit_hold"
-                    />
-                    <field
-                        name="credit_hold"
                         groups="osi_partner_credit_limit.group_credit_hold"
                     />
                 </group>
