--- a/osi_xlsx_report_email/views/xlsx_report_email_views.xml
+++ b/osi_xlsx_report_email/views/xlsx_report_email_views.xml
@@ -8,11 +8,13 @@
             <form string="XLSX Report Email">
                 <sheet>
                     <group>
+                        <field name="name"/>
                         <field name="model_id"/>
                         <field name="email"/>
                         <field name="report_fields" widget="many2many_tags"/>
                         <field name="groupby_fields" widget="many2many_tags"/>
-                        <field name="domain_expr"/>
+                        <field name="model_name" invisible="1" />
+                        <field name="domain_expr" widget="domain" options = "{'model': 'model_name'}" />
                         <field name="report_name"/>
                     </group>
                 </sheet>
