--- a/osi_partner_credit_limit/views/sale.xml
+++ b/osi_partner_credit_limit/views/sale.xml
@@ -25,19 +25,14 @@
             name="inherit_id"
             ref="osi_partner_credit_limit.sale_order_credit_view"
         />
-        <field
-            name="groups_id"
-            eval="[(6, 0, [ref('osi_partner_credit_limit.group_credit_hold') ])]"
-        />
         <field name="arch" type="xml">
             <field name='ship_hold' position="attributes">
-                <attribute name="attrs">{'readonly': [
-                    ('state', 'not in', ('draft', 'sent', 'sale'))]}</attribute>
+                <attribute name="readonly">"state not in ('draft', 'sent', 'sale')"</attribute>
+                <attribute name="groups">osi_partner_credit_limit.group_credit_hold</attribute>
             </field>
             <field name='credit_override' position="attributes">
-                <attribute
-                    name="attrs"
-                >{'readonly': [('state', 'in', ('cancel', 'done'))]}</attribute>
+                <attribute name="readonly">"state in ('cancel', 'done')"</attribute>
+                <attribute name="groups">osi_partner_credit_limit.group_credit_hold</attribute>
             </field>
         </field>
     </record>
