--- a/osi_partner_credit_limit/views/res_partner.xml
+++ b/osi_partner_credit_limit/views/res_partner.xml
@@ -11,7 +11,7 @@
                 <group string="Credit Management">
                     <field name="sales_hold" />
                     <field
-                        name="credit_limit"
+                        name="credit_limit" widget="monetary"
                         groups="osi_partner_credit_limit.group_credit_hold"
                     />
                     <field
