--- a/sale_product_approval_mrp/views/product_template.xml
+++ b/sale_product_approval_mrp/views/product_template.xml
@@ -3,6 +3,7 @@
     <record id="product_template_form_view_inherit_mrp" model="ir.ui.view">
         <field name="name">product_template_form_view_inherit_mrp</field>
         <field name="model">product.template</field>
+        <field name="priority">101</field>
         <field name="inherit_id" ref="product.product_template_form_view" />
         <field name="arch" type="xml">
             <div name="options" position="inside">
