--- a/sale_product_approval_purchase/views/product_template.xml
+++ b/sale_product_approval_purchase/views/product_template.xml
@@ -3,6 +3,7 @@
     <record id="product_template_form_view_inherit_purchase" model="ir.ui.view">
         <field name="name">product_template_form_view_inherit_purchase</field>
         <field name="model">product.template</field>
+        <field name="priority">101</field>
         <field name="inherit_id" ref="product.product_template_form_view" />
         <field name="arch" type="xml">
             <group name="candidate_fields" position="inside">
