--- a/osi_partner_credit_limit/views/res_partner.xml
+++ b/osi_partner_credit_limit/views/res_partner.xml
@@ -9,7 +9,7 @@
         <field name="arch" type="xml">
             <group name="fiscal_information" position="before">
                 <group string="Credit Management">
-                    <field name="sales_hold" />
+                    <field name="sales_hold" groups="osi_partner_credit_limit.group_credit_hold"/>
                     <field
                         name="credit_limit" widget="monetary"
                         groups="osi_partner_credit_limit.group_credit_hold"
@@ -22,6 +22,9 @@
                         name="credit_hold"
                         groups="osi_partner_credit_limit.group_credit_hold"
                     />
+                    <field name="credit_available" readonly="1" />
+                    <field name="credit_used" readonly="1"/>
+                    <field name="ship_hold_days" groups="osi_partner_credit_limit.group_credit_hold"/>
                 </group>
             </group>
         </field>
