--- a/l10n_mx_edi_addenda_audi/views/account_move_views.xml
+++ b/l10n_mx_edi_addenda_audi/views/account_move_views.xml
@@ -6,8 +6,8 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='l10n_mx_edi_cfdi_origin']" position="after">
-                <field name="unidad_negocio"/>
-                <field name="email_solicitante"/>
+                <field name="audi_business_unit"/>
+                <field name="audi_applicant_email"/>
             </xpath>
         </field>
     </record>
