--- a/advance_check_void/views/account_payment_view.xml
+++ b/advance_check_void/views/account_payment_view.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
-    <record
-        id="advanced_check_void_account_payment_list_inherited"
-        model="ir.ui.view"
-    >
+    <record id="advanced_check_void_account_payment_list_inherited" model="ir.ui.view">
         <field name="name">account.payment.list.inherited</field>
         <field name="model">account.payment</field>
-        <field
-            name="inherit_id"
-            ref="account.view_account_supplier_payment_tree"
-        />
+        <field name="inherit_id" ref="account.view_account_supplier_payment_tree" />
         <field name="arch" type="xml">
             <xpath expr="//field[@name='state']" position="before">
                 <field
@@ -23,10 +17,7 @@
         </field>
     </record>
 
-    <record
-        id="advanced_check_void_account_payment_form_inherited"
-        model="ir.ui.view"
-    >
+    <record id="advanced_check_void_account_payment_form_inherited" model="ir.ui.view">
         <field name="name">account.payment.form.inherited</field>
         <field name="model">account.payment</field>
         <field
@@ -80,24 +71,18 @@
                 <widget
                     name="web_ribbon"
                     title="Reversed"
-                    invisible="payment_state != 'reversed'" 
+                    invisible="payment_state != 'reversed'"
                 />
             </xpath>
 
             <field name="ref" position="after">
-                <field
-                    name="void_reason"
-                    invisible="payment_state != 'reversed'"
-                />
+                <field name="void_reason" invisible="payment_state != 'reversed'" />
             </field>
 
         </field>
     </record>
 
-    <record
-        id="advanced_check_void_account_payment_form_inherit2"
-        model="ir.ui.view"
-    >
+    <record id="advanced_check_void_account_payment_form_inherit2" model="ir.ui.view">
         <field name="name">account.payment.form.inherited</field>
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account.view_account_payment_form" />
