--- a/product_configurator/wizard/product_configurator_view.xml
+++ b/product_configurator/wizard/product_configurator_view.xml
@@ -14,6 +14,7 @@
                         name="action_reset"
                         confirm="Are you sure? This will remove your current configuration for this template!"
                         class="oe_highlight"
+                        special="no_save"
                         invisible="not product_tmpl_id or state == 'select'"
                     />
                 </header>
