--- a/l10n_mx_edi_addenda_audi/views/account_move_views.xml
+++ b/l10n_mx_edi_addenda_audi/views/account_move_views.xml
@@ -15,6 +15,9 @@
                     </group>
                 </page>
             </xpath>
+            <xpath expr="//notebook//page[@name='invoice_tab']//field[@name='invoice_line_ids']//tree//field[@name='product_id']" position="after">
+                <field name="audi_line_product_ref"/>
+            </xpath>
         </field>
     </record>
 </odoo>
