--- a/l10n_mx_edi_addenda_audi/views/product_template_views.xml
+++ b/l10n_mx_edi_addenda_audi/views/product_template_views.xml
@@ -2,11 +2,14 @@
     <record id="view_product_template_form_inherit_addenda_audi" model="ir.ui.view">
         <field name="name">product.template.form.inherit.addenda.audi</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_only_form_view" />
+        <field name="inherit_id" ref="product.product_template_form_view" />
         <field name="arch" type="xml">
-            <xpath expr="//notebook//page[@name='invoicing']//group[@name='accounting']" position="inside">
+            <xpath
+                expr="//notebook//page[@name='invoicing']//group[@name='accounting']"
+                position="inside"
+            >
                 <group string="Audi Product Reference">
-                    <field name="audi_product_ref"/>
+                    <field name="audi_product_ref" />
                 </group>
             </xpath>
         </field>
