[FIX] l10n_mx_edi_addenda_audi

--- a/l10n_mx_edi_addenda_audi/views/product_template_views.xml
+++ b/l10n_mx_edi_addenda_audi/views/product_template_views.xml
@@ -9,7 +9,7 @@
                 position="inside"
             >
                 <group string="Audi Product Reference">
-                    <field name="audi_product_ref" />
+                    <field name="audi_ref" />
                 </group>
             </xpath>
         </field>
